--- a/www/templates/items.html
+++ b/www/templates/items.html
@@ -3,7 +3,7 @@
   <ion-header class="bar bar-subheader">
     <label class="item item-input">
       <i class="icon ion-search placeholder-icon"></i>
-      <input type="text" placeholder="Search Anything..." ng-model="searchTerm">
+      <input type="search" placeholder="Search Anything..." ng-model="searchTerm">
     </label>
   </ion-header>
 
